feat: Update .gitignore and README.md
- Update .gitignore to ignore pnpm files and other standard files.

- Update README.md to add a section about ignored files.

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,13 @@ frontend/dist/
 # Ignore credentials
 backend/creds.json
 
-
+# Ignore pnpm files
+pnpm-lock.yaml
+pnpm-workspace.yaml
 
 # Ignore Python cache
 *.pyc
 __pycache__/
+
+# Ignore other files
+.DS_Store
